# platform2-sommelier

./: .clang-format  .gitignore  .gn  COMMIT-QUEUE.ini  LICENSE  OWNERS  PRESUBMIT.cfg  README  README.md  common.gypi  common.mk  deps.gypi  external_dependencies.gyp  lex.gypi  navbar.md  platform.gyp  platform2.py  platform2_test.py  protoc.gypi  xml2cpp.gypi
apmanager/: BUILD.gn  apmanager.gyp  config.cc  config.h  config_adaptor_interface.h  config_test.cc  config_unittest.cc  control_interface.h  daemon.cc  daemon.h  dbus_control.cc  device.cc  device.h  device_adaptor_interface.h  device_info.cc  device_info.h  device_info_test.cc  device_info_unittest.cc  device_unittest.cc  dhcp_server.cc  dhcp_server.h  dhcp_server_factory.cc  dhcp_server_factory.h  dhcp_server_test.cc  dhcp_server_unittest.cc  error.cc  error.h  error_test.cc  event_dispatcher.cc  event_dispatcher.h  fake_config_adaptor.cc  fake_config_adaptor.h  fake_device_adaptor.cc  fake_device_adaptor.h  file_writer.cc  file_writer.h  firewall_manager.cc  firewall_manager.h  firewall_proxy_interface.h  firewalld_dbus_proxy.cc  (+54 more)
attestation/: BUILD.gn  OWNERS  attestation.gyp  attestation_testrunner.cc
biod/: BUILD.gn  COMMIT-QUEUE.ini  OWNERS  README.md  bio_algorithm.h  bio_crypto_init.cc  bio_library.cc  bio_library.h  bio_wash.cc  biod.gyp  biod_crypto.cc  biod_crypto.h  biod_crypto_test.cc  biod_crypto_test_data.h  biod_crypto_validation_value_fuzzer.cc  biod_metrics.cc  biod_metrics.h  biod_metrics_test.cc  biod_storage.cc  biod_storage.h  biod_storage_fuzzer.cc  biod_storage_test.cc  biod_storage_unittest.cc  biod_version.h  biometric.h  biometrics_daemon.cc  biometrics_daemon.h  biometrics_manager.h  cros_fp_biometrics_manager.cc  cros_fp_biometrics_manager.h  cros_fp_biometrics_manager_test.cc  cros_fp_device.cc  cros_fp_device.h  cros_fp_device_factory.h  cros_fp_device_factory_impl.h  cros_fp_device_interface.h  cros_fp_device_test.cc  cros_fp_firmware.cc  cros_fp_firmware.h  cros_fp_firmware_test.cc  (+50 more)
bluetooth/: BUILD.gn  OWNERS  README.md  bluetooth.gyp
bootstat/: BUILD.gn  OWNERS  README  README.md  bootstat.c  bootstat.gyp  bootstat.h  bootstat_archive  bootstat_get_last  bootstat_log.c  bootstat_summary  bootstat_test.cc  bootstat_test.h  log_unit_tests.cc
buffet/: BUILD.gn  COMMIT-QUEUE.ini  HACKING  OWNERS  README  any.cc  any.h  any_internal_impl.h  any_internal_impl_unittest.cc  any_unittest.cc  ap_manager_client.cc  ap_manager_client.h  async_event_sequencer.cc  async_event_sequencer.h  async_event_sequencer_unittest.cc  base_api_handler.cc  base_api_handler.h  base_api_handler_unittest.cc  bind_lambda.h  buffet.conf  buffet.gyp  buffet_client.cc  buffet_config.cc  buffet_config.h  buffet_config_test.cc  buffet_config_unittest.cc  buffet_testrunner.cc  data_encoding.cc  data_encoding.h  data_encoding_unittest.cc  dbus_command_dispatcher.cc  dbus_command_dispatcher.h  dbus_command_proxy.cc  dbus_command_proxy.h  dbus_command_proxy_unittest.cc  dbus_constants.cc  dbus_constants.h  dbus_conversion.cc  dbus_conversion.h  dbus_conversion_unittest.cc  (+66 more)
cecservice/: BUILD.gn  OWNERS  README.md  cec_device.cc  cec_device.h  cec_device_mock.h  cec_device_test.cc  cec_device_unittest.cc  cec_fd.cc  cec_fd.h  cec_fd_mock.h  cec_manager.cc  cec_manager.h  cec_manager_test.cc  cec_manager_unittest.cc  cecservice.gyp  cecservice_dbus_adaptor.cc  cecservice_dbus_adaptor.h  main.cc  udev.cc  udev.h  udev_mock.h
cfm-device-updater/: BUILD.gn  OWNERS  README.md  cfm-device-updater.gyp
cfm-dfu-notification/: BUILD.gn  dfu_log_notification.cc  dfu_log_notification.h  dfu_log_notification_test.cc  idfu_notification.cc  idfu_notification.h  platform2_preinstall.sh
chaps/: BUILD.gn  LICENSE  Makefile  OWNERS  README  README.md  attributes.cc  attributes.h  attributes.proto  attributes_fuzzer.cc  chaps.cc  chaps.gyp  chaps.h  chaps_adaptor.cc  chaps_adaptor.h  chaps_client.cc  chaps_event_generator.cc  chaps_factory.h  chaps_factory_impl.cc  chaps_factory_impl.h  chaps_factory_mock.cc  chaps_factory_mock.h  chaps_interface.h  chaps_interface.xml  chaps_pam_module.cc  chaps_pam_module_test.cc  chaps_proxy.cc  chaps_proxy.h  chaps_proxy_interface.h  chaps_proxy_mock.cc  chaps_proxy_mock.h  chaps_service.cc  chaps_service.h  chaps_service_redirect.cc  chaps_service_redirect.h  chaps_service_test.cc  chaps_test.cc  chaps_utility.cc  chaps_utility.h  chapsd.cc  (+107 more)
chromeos-config/: .gitignore  BUILD.gn  COMMIT-QUEUE.ini  OWNERS  PRESUBMIT.cfg  README.md  chromeos-config-test-setup.sh  chromeos-config.gyp  cros_config_host.py  cros_config_host_main.cc  cros_config_host_main_unittest.cc  cros_config_host_migration_test.sh  cros_config_host_py  cros_config_host_unittest.py  cros_config_main.cc  cros_config_main_test.cc  cros_config_main_unittest.cc  cros_config_migration_test.sh  cros_config_schema.json  cros_config_schema.py  cros_config_schema_example.yaml  cros_config_schema_unittest.py  libcros_config_host_unittest.py  mosys_migration_test.sh  platform2_preinstall.sh  run_tests.sh  setup.py  test-readme.sh  validate_config  validate_config.py  validate_config_unittest.py  validate_schema.py
chromeos-dbus-bindings/: BUILD.gn  Cargo.toml  OWNERS  README.md  adaptor_generator.cc  adaptor_generator.h  adaptor_generator_test.cc  adaptor_generator_unittest.cc  chromeos-dbus-bindings.gyp  dbus_signature.cc  dbus_signature.h  dbus_signature_test.cc  dbus_signature_unittest.cc  generate_chromeos_dbus_bindings.cc  header_generator.cc  header_generator.h  indented_text.cc  indented_text.h  indented_text_unittest.cc  interface.h  method_name_generator.cc  method_name_generator.h  method_name_generator_unittest.cc  name_parser.cc  name_parser.h  name_parser_test.cc  name_parser_unittest.cc  proxy_generator.cc  proxy_generator.h  proxy_generator_mock_test.cc  proxy_generator_mock_unittest.cc  proxy_generator_test.cc  proxy_generator_unittest.cc  test_utils.cc  testrunner.cc  xml_interface_parser.cc  xml_interface_parser.h  xml_interface_parser_test.cc  xml_interface_parser_unittest.cc
codelab/: BUILD.gn  OWNERS  README.md  (+4 more)
(+12794 files in other folders)
